--- a/frontend/register.html
+++ b/frontend/register.html
@@ -148,14 +148,14 @@
             <!-- Login Link -->
             <div class="mt-8 text-center border-t border-white/5 pt-6">
                 <p class="text-xs text-slate-500">มีบัญชีอยู่แล้ว? 
-                    <a href="login.php" class="text-cyan-400 font-bold hover:underline ml-1">เข้าสู่ระบบที่นี่</a>
+                    <a href="login.html" class="text-cyan-400 font-bold hover:underline ml-1">เข้าสู่ระบบที่นี่</a>
                 </p>
             </div>
         </div>
 
         <!-- Back to Home -->
         <div class="text-center mt-6">
-            <a href="index.php" class="text-[10px] font-bold text-slate-600 hover:text-white transition uppercase tracking-widest">
+            <a href="index.html" class="text-[10px] font-bold text-slate-600 hover:text-white transition uppercase tracking-widest">
                 ← กลับสู่หน้าหลัก
             </a>
         </div>
