--- a/frontend/index.html
+++ b/frontend/index.html
@@ -222,10 +222,10 @@ $credits = $isLoggedIn ? 500 : 0;
             <h3 class="text-2xl font-orbitron font-bold text-white mb-2 uppercase tracking-tight">เข้าสู่ระบบ</h3>
             <p class="text-slate-400 text-sm mb-8">กรุณาเข้าสู่ระบบหรือสมัครสมาชิกก่อนทำรายการเพื่อรับสิทธิพิเศษมากมาย</p>
             <div class="flex flex-col gap-3">
-                <button onclick="location.href='login.html'" class="btn-action w-full py-3 rounded-xl font-bold uppercase tracking-widest text-sm shadow-lg">
+                <button onclick="location.href='login.php'" class="btn-action w-full py-3 rounded-xl font-bold uppercase tracking-widest text-sm shadow-lg">
                     เข้าสู่ระบบตอนนี้
                 </button>
-                <button onclick="location.href='register.html'" class="btn-outline w-full py-3 rounded-xl font-bold uppercase tracking-widest text-sm text-cyan-400">
+                <button onclick="location.href='register.php'" class="btn-outline w-full py-3 rounded-xl font-bold uppercase tracking-widest text-sm text-cyan-400">
                     สมัครสมาชิกใหม่
                 </button>
                 <button onclick="closeAuthModal()" class="mt-2 text-slate-500 hover:text-white transition text-xs font-bold uppercase">
@@ -256,8 +256,8 @@ $credits = $isLoggedIn ? 500 : 0;
                 </div>
                 <button class="w-10 h-10 rounded-full bg-slate-800 border border-cyan-500/30 flex items-center justify-center">👤</button>
             <?php else: ?>
-                <button onclick="location.href='login.html'" class="text-slate-300 hover:text-white px-3 py-2 text-xs font-bold uppercase transition">Login</button>
-                <button onclick="location.href='register.html'" class="btn-action px-5 py-2 rounded-lg font-bold text-xs uppercase shadow-lg">Register</button>
+                <button onclick="location.href='login.php'" class="text-slate-300 hover:text-white px-3 py-2 text-xs font-bold uppercase transition">Login</button>
+                <button onclick="location.href='register.php'" class="btn-action px-5 py-2 rounded-lg font-bold text-xs uppercase shadow-lg">Register</button>
             <?php endif; ?>
         </div>
     </div>
@@ -398,128 +398,4 @@ $credits = $isLoggedIn ? 500 : 0;
 </footer>
 
 </body>
-</html>font-bold uppercase tracking-[0.2em] shadow-lg text-sm">
-                ชำระเงินทันที
-            </button>
-            <p class="text-[10px] text-center text-slate-500 italic">* ระบบจะทำรายการภายใน 1-3 นาที หลังจากชำระเงินสำเร็จ</p>
-        </div>
-    </div>
-
-    <!-- DDC Server Card -->
-    <div id="server" class="glass-card rounded-[2.5rem] p-8 border-t-4 border-cyan-400">
-        <div class="flex justify-between items-start mb-6">
-            <div class="flex items-center gap-3">
-                <div class="w-10 h-10 bg-cyan-500/20 rounded-full flex items-center justify-center text-cyan-400">💻</div>
-                <h3 class="text-xl font-orbitron font-bold text-cyan-400 uppercase tracking-widest">DDC Server</h3>
-            </div>
-            <span class="bg-emerald-500/10 text-emerald-400 text-[10px] font-bold px-3 py-1 rounded-full border border-emerald-500/30">ONLINE</span>
-        </div>
-        <div class="space-y-4">
-            <div class="bg-slate-900/50 p-5 rounded-2xl flex items-center justify-between border border-white/5 hover:border-cyan-400/30 transition cursor-pointer">
-                <div>
-                    <p class="text-xs font-bold uppercase tracking-tighter">DDC Lite Node</p>
-                    <p class="text-[10px] text-slate-500">2 vCPU / 4GB RAM / 40GB SSD</p>
-                </div>
-                <div class="text-right">
-                    <p class="font-orbitron font-bold text-lg">250 ฿</p>
-                </div>
-            </div>
-            <div class="bg-slate-900/50 p-5 rounded-2xl flex items-center justify-between border border-cyan-400/30 bg-cyan-400/5 hover:scale-[1.02] transition cursor-pointer">
-                <div>
-                    <p class="text-xs font-bold uppercase tracking-tighter text-cyan-400">DDC Pro Gaming</p>
-                    <p class="text-[10px] text-slate-500">4 vCPU / 16GB RAM / 100GB SSD</p>
-                </div>
-                <div class="text-right">
-                    <p class="font-orbitron font-bold text-lg">750 ฿</p>
-                </div>
-            </div>
-            <button onclick="checkAuth()" class="w-full border border-cyan-500/30 hover:bg-cyan-500/10 py-4 rounded-xl font-bold uppercase tracking-widest transition text-xs mt-4">
-                ปรับแต่งสเปกตามความต้องการ
-            </button>
-        </div>
-    </div>
-</section>
-
-<!-- ID Shop Section -->
-<section id="shop" class="max-w-7xl mx-auto px-6 py-12">
-    <div class="flex justify-between items-end mb-8">
-        <div>
-            <h2 class="text-2xl font-orbitron font-bold uppercase tracking-wider text-cyan-400">ID Game Shop</h2>
-            <p class="text-slate-500 text-xs">ไอดีสะอาด ปลอดภัย รับประกันจาก NexoraShop</p>
-        </div>
-        <a href="#" class="text-xs font-bold text-slate-400 hover:text-white underline">ดูทั้งหมด</a>
-    </div>
-    <div class="grid grid-cols-2 md:grid-cols-4 gap-6">
-        <div class="glass-card rounded-2xl overflow-hidden group">
-            <div class="h-40 bg-slate-800 relative overflow-hidden">
-                <img src="https://images.unsplash.com/photo-1542751371-adc38448a05e?auto=format&fit=crop&w=400&q=80" alt="Game ID" class="w-full h-full object-cover group-hover:scale-110 transition duration-500">
-                <span class="absolute top-2 left-2 bg-red-500 text-[10px] font-bold px-2 py-1 rounded">HOT</span>
-            </div>
-            <div class="p-4">
-                <h4 class="font-bold text-sm mb-1 uppercase">Valorant - Ascendant II</h4>
-                <div class="flex justify-between items-center mt-3">
-                    <span class="font-orbitron font-bold text-cyan-400">1,250 ฿</span>
-                    <button onclick="checkAuth()" class="bg-white/10 hover:bg-white/20 p-2 rounded-lg transition text-xs font-bold">ซื้อเลย</button>
-                </div>
-            </div>
-        </div>
-        <div class="glass-card rounded-2xl overflow-hidden group">
-            <div class="h-40 bg-slate-800 relative overflow-hidden">
-                <img src="https://images.unsplash.com/photo-1511512578047-dfb367046420?auto=format&fit=crop&w=400&q=80" alt="Game ID" class="w-full h-full object-cover group-hover:scale-110 transition duration-500">
-            </div>
-            <div class="p-4">
-                <h4 class="font-bold text-sm mb-1 uppercase">Genshin - AR 55</h4>
-                <div class="flex justify-between items-center mt-3">
-                    <span class="font-orbitron font-bold text-cyan-400">890 ฿</span>
-                    <button onclick="checkAuth()" class="bg-white/10 hover:bg-white/20 p-2 rounded-lg transition text-xs font-bold">ซื้อเลย</button>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-<!-- Lucky Wheel Section -->
-<section id="wheel" class="max-w-4xl mx-auto px-6 py-20">
-    <div class="glass-card rounded-[3rem] p-10 text-center relative overflow-hidden">
-        <div class="relative z-10">
-            <h2 class="text-3xl font-orbitron font-bold mb-2 tracking-tighter uppercase">Lucky <span class="text-cyan-400">Wheel</span></h2>
-            <p class="text-slate-400 text-sm mb-10">สุ่มรางวัลใหญ่ได้ทุกวันกับ NexoraShop</p>
-            
-            <div class="wheel-container">
-                <div class="wheel-pointer"></div>
-                <div id="main-wheel" class="wheel"></div>
-            </div>
-
-            <button onclick="checkAuth(spinWheel)" id="spin-btn" class="btn-action mt-12 px-12 py-4 rounded-2xl font-bold font-orbitron tracking-[0.2em] text-lg">SPIN NOW</button>
-        </div>
-        <div class="absolute top-[-50px] right-[-50px] w-64 h-64 bg-cyan-500/10 blur-[100px] rounded-full"></div>
-        <div class="absolute bottom-[-50px] left-[-50px] w-64 h-64 bg-purple-500/10 blur-[100px] rounded-full"></div>
-    </div>
-</section>
-
-<!-- Footer -->
-<footer class="py-10 border-t border-white/5 text-center">
-    <p class="text-[10px] font-orbitron font-bold text-slate-600 tracking-widest uppercase">© 2026 NEXORASHOP - ALL RIGHTS RESERVED</p>
-</footer>
-
-<script>
-    let isSpinning = false;
-    function spinWheel() {
-        if (isSpinning) return;
-        const wheel = document.getElementById('main-wheel');
-        const spinBtn = document.getElementById('spin-btn');
-        isSpinning = true;
-        spinBtn.disabled = true;
-        spinBtn.style.opacity = '0.5';
-        const randomDegree = Math.floor(Math.random() * 360) + (360 * 5);
-        wheel.style.transform = `rotate(${randomDegree}deg)`;
-        setTimeout(() => {
-            isSpinning = false;
-            spinBtn.disabled = false;
-            spinBtn.style.opacity = '1';
-        }, 4000);
-    }
-</script>
-
-</body>
-</html>
+    </html>
